--- a/baseline_AST.yaml
+++ b/baseline_AST.yaml
@@ -31,16 +31,16 @@ feature:
       probability: 0.5
       min_factor: 0.001
       max_factor: 0.02
-  preprocessing_batch_size: 64
+  preprocessing_batch_size: 32  # Reduced from 64
   dataset_chunking:
     enabled: true
-    chunk_size: 1000  # Process 5000 files at a time
+    chunk_size: 500  # Reduced from 1000
     temp_directory: "./temp_chunks/temp_chunks_AST"
   large_dataset:
     enabled: true
     temp_storage: "/tmp/ast_training"  # SSD if available
-    cache_spectrograms: true
-    max_files_in_memory: 5000
+    cache_spectrograms: false  # Disabled caching to reduce memory usage
+    max_files_in_memory: 1000  # Reduced from 5000
     precompute_enabled: false
 
 
@@ -53,7 +53,7 @@ fit:
     metrics: ["accuracy"]
     weighted_metrics: ["accuracy"]
   epochs: 50
-  batch_size: 16
+  batch_size: 8  # Reduced from 16
   shuffle: True
   validation_split: 0.1
   verbose: 1
@@ -95,8 +95,8 @@ training:
   find_optimal_lr: false
   mixed_precision: true
   xla_acceleration: true
-  optimize_batch_size: true
-  gradient_accumulation_steps: 1
+  optimize_batch_size: false  # Disable as we're manually setting it
+  gradient_accumulation_steps: 2  # Increased from 1 for memory efficiency
   gradient_clip_norm: 1.0
   mixup:
     enabled: true
@@ -105,17 +105,15 @@ training:
     save_frequency: 1000
     keep_checkpoints: 5
   memory_optimization:
-    clear_memory_frequency: 25
-    prefetch_buffer_size: 4
+    clear_memory_frequency: 5  # Increased frequency from 25
+    prefetch_buffer_size: 2  # Reduced from 4
   progressive_training:
-    enabled: true
-    sizes: [[48, 64], [64, 96]]
-    epochs_per_size: [10, 15]
+    enabled: false  # Disable progressive training to simplify
   streaming_data:
     enabled: true
-    prefetch_buffer_size: 2
-    parallel_calls: 8
-    cache_size: 1000
+    prefetch_buffer_size: 1  # Reduced from 2
+    parallel_calls: 4  # Reduced from 8
+    cache_size: 500  # Reduced from 1000
   efficient_attention:
     enabled: true
     type: "linear"
@@ -127,7 +125,7 @@ model:
   architecture:
     transformer:
       num_heads: 1
-      dim_feedforward: 128
+      dim_feedforward: 64  # Reduced from 128
       num_encoder_layers: 1
       positional_encoding: true
       use_pretrained: false
@@ -138,7 +136,7 @@ model:
       pos_encoding_type: "sinusoidal"  # Options: "sinusoidal", "learned", "alibi", "rotary"
       layer_norm_epsilon: 1.0e-6
       activation_fn: "gelu"  # Options: "gelu", "relu", "swish"
-      ff_dim_multiplier: 4
+      ff_dim_multiplier: 2  # Reduced from 4
       enable_rotary: false
   loss: "binary_crossentropy"
   l2_regularization: 0.00001
