--- a/baseline_MAST.yaml
+++ b/baseline_MAST.yaml
@@ -51,7 +51,8 @@ fit:
   compile:
     optimizer: "adamw"
     learning_rate: 0.0003  # restored original compile LR
-    loss: "focal_loss"  # switch to focal loss for class imbalance
+    loss: "binary_crossentropy"  # using binary crossentropy as requested
+    label_smoothing: 0.1        # optional smoothing on binary crossentropy
     focal_loss:
       gamma: 2.0
       alpha: 0.25
@@ -73,10 +74,11 @@ fit:
   apply_sample_weights: false  # disabled uniform sample weighting
   special_case_weights: {}  # remove per-machine weight overrides
   lr_scheduler:
-    type: "cosine_annealing_restarts"  # use cosine restarts schedule
-    first_decay_steps: 10000            # initial decay steps
-    t_mul: 2.0                          # multiplier for restart periods
-    alpha: 0.00000001                   # minimum learning rate factor
+    type: "cosine_annealing_restarts"
+    initial_learning_rate: 0.00001      # one-cycle style base LR
+    first_decay_steps: 5000             # faster restart for one-cycle
+    t_mul: 2.0
+    alpha: 0.000001                     # minimum LR factor
     enabled: true
     monitor: "val_loss"
     factor: 0.5  # Changed from 0.1 to less aggressive reduction
@@ -99,7 +101,7 @@ fit:
 
 # Training optimizations
 training:
-  learning_rate: 0.00001    # restored default AdamW initial LR 1e-5
+  learning_rate: 0.00001   # base LR for fine-tuning
   find_optimal_lr: false
   mixed_precision: true
   xla_acceleration: false
@@ -123,13 +125,14 @@ training:
 model:
   architecture:
     transformer:
-      num_heads: 8  # Increased from 4
-      dim_feedforward: 768  # Increased from 512
-      num_encoder_layers: 3  # Increased from 2
+      num_heads: 8
+      dim_feedforward: 768
+      num_encoder_layers: 4         # Added extra encoder layer for capacity
       positional_encoding: true
-      use_pretrained: false  # Changed to false to avoid dependency issues
+      use_pretrained: false
       patch_size: 4
-      attention_dropout: 0.2  # Increased from 0.1
+      attention_dropout: 0.1       # Reduced dropout for smoother learning
+      mlp_dropout: 0.1             # Added dropout in feedforward block
       attention_type: "standard"  # Changed from "efficient" 
       pos_encoding_type: "sinusoidal"
       layer_norm_epsilon: 1.0e-6
