--- a/baseline_MAST.yaml
+++ b/baseline_MAST.yaml
@@ -128,7 +128,7 @@ model:
 mast:
   pretraining:
     enabled: true
-    epochs: 10
+    epochs: 1 #debug 10
     batch_size: 32
     use_normal_only: true
     learning_rate: 1e-4
@@ -194,11 +194,11 @@ optimization:
   optuna:
     enable: true         # Enable Optuna hyperparameter optimization
     direction: "maximize"  # Target metric direction (maximize validation accuracy)
-    n_trials: 1         # Number of hyperparameter trials
+    n_trials: 1         # Number of hyperparameter trials debug 50
     timeout: null        # Timeout in seconds for the study (null = no timeout)
     metric: "val_accuracy"  # Metric to optimize
     sampler: "TPESampler"  # Optuna sampler to use
-    trial_epochs: 1      # Number of epochs per trial for quick evaluation
+    trial_epochs: 1      # Number of epochs per trial for quick evaluation debug 5
     parameters:
       learning_rate:
         low: 1e-6
