--- a/baseline_MAST.yaml
+++ b/baseline_MAST.yaml
@@ -192,29 +192,33 @@ logging:
 # Hyperparameter Optimization
 optimization:
   optuna:
-    enable: true         # Enable Optuna hyperparameter optimization
-    direction: "maximize"  # Target metric direction (maximize validation accuracy)
-    n_trials: 50         # Number of hyperparameter trials debug 50
-    timeout: null        # Timeout in seconds for the study (null = no timeout)
-    metric: "val_accuracy"  # Metric to optimize
-    sampler: "TPESampler"  # Optuna sampler to use
-    trial_epochs: 15      # Number of epochs per trial for quick evaluation debug 5
+    enable: true
+    direction: "maximize"
+    n_trials: 1  # Increased from 50 for maximum exploration debug 100
+    timeout: null
+    metric: "val_accuracy"
+    sampler: "TPESampler"
+    trial_epochs: 1  # Increased for better evaluation debug 20
     parameters:
       learning_rate:
         low: 1e-8
-        high: 1e-2
+        high: 1e-1
         log: true
       num_encoder_layers:
         low: 2
-        high: 8
+        high: 12
         step: 1
       dropout_rate:
         low: 0.0
-        high: 0.5
+        high: 0.7
       mlp_dropout:
         low: 0.0
-        high: 0.5
-    early_stopping:
-      enabled: true
-      patience: 5
-      threshold: 0.001
+        high: 0.7
+      early_stopping_patience:
+        type: "int"
+        low: 3
+        high: 15
+      early_stopping_threshold:
+        type: "loguniform"
+        low: 1e-4
+        high: 1e-2
