--- a/baseline_fnn.yaml
+++ b/baseline_fnn.yaml
@@ -83,24 +83,31 @@ logging:
 # Optuna hyperparameter optimization parameters
 optuna:
   enabled: true
-  trials: 50
-  metric: "val_accuracy"  # Specify the metric to optimize
-  trial_epochs: 50  # Number of epochs per trial for quick evaluation debug
+  trials: 100  # Increased from 50 for maximum exploration
+  metric: "val_accuracy"
+  trial_epochs: 50
   search_space:
     learning_rate:
       type: "loguniform"
-      low: 1e-5
+      low: 1e-6
       high: 1e-1
     dropout_rate:
       type: "uniform"
-      low: 0.1
-      high: 0.5
+      low: 0.0
+      high: 0.7
     depth:
       type: "int"
       low: 2
-      high: 6
+      high: 10
     width:
       type: "int"
       low: 64
-      high: 256
-  
+      high: 512
+    early_stopping_patience:
+      type: "int"
+      low: 3
+      high: 15
+    early_stopping_threshold:
+      type: "loguniform"
+      low: 1e-4
+      high: 1e-2
