--- a/baseline_fnn.yaml
+++ b/baseline_fnn.yaml
@@ -83,31 +83,31 @@ logging:
 # Optuna hyperparameter optimization parameters
 optuna:
   enabled: true
-  trials: 100  # Increased from 50 for maximum exploration
+  trials: 100
   metric: "val_accuracy"
   trial_epochs: 50
   search_space:
     learning_rate:
-      type: "loguniform"
-      low: 1e-6
-      high: 1e-1
+      type: "adam"
+      low: 0.0001
+      high: 0.01
     dropout_rate:
       type: "uniform"
-      low: 0.0
-      high: 0.7
+      low: 0.1
+      high: 0.3
     depth:
       type: "int"
-      low: 2
-      high: 10
+      low: 3
+      high: 5
     width:
       type: "int"
       low: 64
-      high: 512
+      high: 256
     early_stopping_patience:
       type: "int"
-      low: 3
-      high: 15
+      low: 8
+      high: 12
     early_stopping_threshold:
       type: "loguniform"
       low: 1e-4
-      high: 1e-2
+      high: 1e-3
