--- a/baseline_MAST.yaml
+++ b/baseline_MAST.yaml
@@ -1,6 +1,3 @@
-# Cleaned and organized YAML configuration file
-# Removed redundant or unused parameters and comments
-
 # General parameters
 version: "3.0.0"
 
@@ -50,7 +47,7 @@ fit:
     learning_rate: 0.0003
     loss: "focal_loss"
     metrics: ["accuracy", "Precision", "Recall", "AUC"]
-  epochs: 1 #debug 50
+  epochs: 100
   batch_size: 16
   shuffle: true
   validation_split: 0.1
@@ -96,7 +93,7 @@ model:
 mast:
   pretraining:
     enabled: true
-    epochs: 1 #debug 10
+    epochs: 10
     batch_size: 32
     learning_rate: 1e-4
     masking:
@@ -108,7 +105,7 @@ mast:
     enabled: true
     initial_learning_rate: 5e-5
     warmup_epochs: 2
-  patch_size: 16  # Default patch size for MAST model
+  patch_size: 16
 
 # Dataset generation parameters
 dataset:
