--- a/baseline_fnn.yaml
+++ b/baseline_fnn.yaml
@@ -18,8 +18,8 @@ feature:
 # Fit algorithm parameters
 fit:
   compile:
-    optimizer: "adam"
-    learning_rate: 0.001  # Adam optimizer learning rate
+    optimizer: "adamW"
+    learning_rate: 0.00016547949550578504
     loss: "binary_crossentropy"
     metrics: ["accuracy"]
     weighted_metrics: ["accuracy"]
@@ -46,10 +46,10 @@ fit:
 model:
   architecture:
     depth: 4
-    width: 128
+    width: 237
     bottleneck: 32
     activation: "sigmoid"
-    dropout: 0.2
+    dropout: 0.1009183938005682
     batch_norm: true
     residual: true
     weight_decay: 0.0001  # L2 regularization weight decay
@@ -79,35 +79,3 @@ result_file: "result_fnn.yaml"
 logging:
   level: "DEBUG"
   file: "./logs/log_fnn/baseline_fnn.log"
-
-# Optuna hyperparameter optimization parameters
-optuna:
-  enabled: false
-  trials: 100
-  metric: "val_accuracy"
-  trial_epochs: 50
-  search_space:
-    learning_rate:
-      type: "adam"
-      low: 0.0001
-      high: 0.01
-    dropout_rate:
-      type: "uniform"
-      low: 0.1
-      high: 0.3
-    depth:
-      type: "int"
-      low: 3
-      high: 5
-    width:
-      type: "int"
-      low: 64
-      high: 256
-    early_stopping_patience:
-      type: "int"
-      low: 8
-      high: 12
-    early_stopping_threshold:
-      type: "loguniform"
-      low: 1e-4
-      high: 1e-3
